fix: keep original data type when exporting temporal variables with categories  (#4022)
* feat: R range extended to temporal variables

* feat: keep orginal datetime type when exporting categorised date/datetime variables